--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@playwright/test": "^1.32.1",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^16.11.35",
+    "angular-cli-ghpages": "^1.0.5",
     "copyfiles": "^2.4.1",
     "jasmine-core": "~4.5.0",
     "jasmine-marbles": "~0.9.2",
